--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <h1>Jogo Genius</h1>
     <div class="main-game">
+        
         <div class="genius">
             <div class="blue"></div>
             <div class="orange"></div>
